# ATHENA11

./: .gitignore  CI日志.txt  CI验证规则及错误日志.md
.github/: copilot-instructions.md
.github/prompts/: 编码宪法.prompt.md
.github/workflows/: auth-ci.yml  ci.yml  frontend-ci.yml
api/: .env.example  .env.production.example  Dockerfile  Dockerfile.ocr  Dockerfile.ocr.prod  Dockerfile.prod  README.md  alembic.ini  check-config.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ocr.txt  requirements.txt  verify_setup.sh
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: __init__.py  main.py
api/app/api/: __init__.py  deps.py
api/app/api/routes/: __init__.py  ai.py  auth.py  billing.py  books.py  export.py  invite.py  notes.py  powersync.py  reading.py  shelves.py  users.py
api/app/api/schemas/: __init__.py  ai.py  auth.py  billing.py  book.py  export.py  invite.py  note.py  reading.py  user.py
api/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
api/app/models/: __init__.py  ai.py  base.py  billing.py  book.py  note.py  reading.py  system.py  user.py  vector.py
api/app/services/: __init__.py  ai_service.py  auth_service.py  billing_service.py  book_service.py  export_service.py  invite_service.py  note_service.py  reading_service.py  storage_service.py  user_service.py
api/app/tasks/: __init__.py  book_tasks.py  celery_app.py  cleanup_tasks.py  conversion_tasks.py  ocr_tasks.py
api/init-scripts/: 01-init.sql
api/powersync/: powersync.yaml  sync-rules.yaml
api/tests/: conftest.py  test_auth.py  test_billing.py  test_books.py  test_export.py  test_health.py  test_invite.py  test_users.py
frontend/: .cursorrules  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/apps/expo/: app.json  package.json  tsconfig.json
frontend/apps/next/: next.config.js  package.json  (+2 more)
雅典娜开发技术文档汇总/: 00 - AI 编码宪法与规范AI_Coding_Constitution_and_Rules.md  01 - 产品灵魂与商业模型Product_Soul_and_Business_Model.md  02 - 功能规格与垂直切片Functional_Specifications_PRD.md  03 - 系统架构与ADR System_Architecture_and_Decisions.md  04 - 数据库全景与迁移Database_Schema_and_Migration_Log.md  05 - API 契约与协议API_Contracts_and_Protocols.md  06 - UIUX设计系统UI_UX_Design_system.md  07 - 部署与 SRE 手册DevOps_and_SRE_Manual.md  08 - 进度实时仪表盘Project_Status.md  09 - 编码陷阱与澄清AI_Coding_Clarifications.md  10 - CI与测试策略_CI_and_Testing_Strategy.md  11 - 配置集中化参考_Configuration_Reference.md  12 - 错误码中心化参考_Error_Code_Reference.md
(+6 files in other folders)
